# FullRustack

./: README.md
Core/: Cargo.toml  spec.tla
Core/db/: db.sql  mydb.sqlite
Core/src/: main.rs
Core/src/domain/: model.rs
Core/src/graphql/: graphql.rs  mod.rs
Core/src/repo/: data_model.rs  local_db_orm.rs  mod.rs  python_api.rs
Core/src/services/: mod.rs  sea_orm_ark.rs
ProjectSmartShop/: .gitignore  Cargo.toml
ProjectSmartShop/db/: mydb.sqlite  note.txt
ProjectSmartShop/examples/: asynch-graphql.rs  lib.rs  sea_orm_ark.rs
ProjectSmartShop/examples/entities/: demo_items.rs
ProjectSmartShop/src/: __main.rs  _main.rs  main.rs
ProjectSmartShop/src/domain/: mod.rs  model.rs
ProjectSmartShop/src/entities/: demo_items.rs  mod.rs  prelude.rs
ProjectSmartShop/src/graphql/: asynch-graphql.rs  graphql.rs  mod.rs
ProjectSmartShop/src/repo/: data_model.rs  local_db_orm.rs  mod.rs  python_api.rs
ProjectSmartShop/src/services/: mod.rs  sea_orm_ark.rs
api/: main.py
helloworld-tonic/: Cargo.toml  README.md  build.rs  note.md
helloworld-tonic/src/: client.rs  server.rs
specs/: main.tla
