[package]
name = "ProjectSmartShop"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
futures = "0.3.31"
systemfd = "0.4.6"

sea-orm = { version = "1.1.10", features = ["sqlx-sqlite"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
# async-std = "1.10"
