[package]
name = "ProjectSmartShop"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
futures = "0.3.31"
systemfd = "0.4.6"

sea-orm = { version = "1.1.10", features = ["sqlx-sqlite"] }
# tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
# async-std = "1.10"

async-graphql = "7.0.16"
# async-graphql-actix-web = "7.0.16" # If you need to integrate into actix-web
async-graphql-warp = "7.0.16" # If you need to integrate into warp
async-graphql-tide = "7.0.16" # If you need to integrate into tide
# tokio = "1.44.2"
tokio = { version = "1.44.2", features = ["full", "macros", "rt-multi-thread"] }

serde_json = "1.0.140"

serde = { version = "1.0", features = ["derive"] }
